2014-10-19  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (r_exprs): New grammar symbol. r_exprs uses
	left-recursive rules to avoid filling the yacc stack, and
	returns the items in reverse order. The output of each
	r_exprs-generating rule consists of a list which gives
	the terminating atom, and then the list contents in reverse order.
	(n_exprs): Becomes wrapper for r_exprs which deals with
	the terminating atom, and reversed items.

2014-10-18  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Allow TXR to support large programs, and efficiently so.
	(clauses_rev): New grammar symbol. Uses a left-recursive rule that
	does not consume an amount of parser stack proportional to the number
	of clauses, and sticks to efficient consing, which means that
	the list is built up in reverse.
	(clauses): Now just a wrapper rule for clauses_rev which nreverses
	its output.
	(clauses_opt): Retargetted to use clauses_rev instead of clauses,
	and reverse its output.

2014-10-18  Kaz Kylheku  <kaz@kylheku.com>

	Deal with situation when GC is disabled and the freshobj array runs out
	of room.  This could happen when parsing a really large TXR program,
	since gc is disabled during parsing. Currently it asserts, which
	is not acceptable.

	* gc.c (make_obj): If after gc, the freshobj array has not been
	emptied (obviously because gc is disabled), do not assert.
	Rather, set the full_gc flag to request a full garbage collection
	when gc is re-enabled.  Furthermore, only place newly allocated objects
	into freshobj if full_gc has not been set. Thus, if we exhaust the
	freshobj array while gc is off, the full_gc flag is set, and we
	discontinue use of that array. When gc is re-enabled, we will do a full
	gc pass. A full gc pass ignores freshobj array, so it doesn't matter
	that its use was discontinued.

2014-10-18  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (mf_all): Drop data_lineno parameter. Initialize
	the corresponding member based on whether or not data is nil.